plugins {
    id 'java'
    id 'application'
}

group 'vazkii'
version '1.0.0-SNAPSHOT'

sourceCompatibility = JavaVersion.VERSION_1_8

repositories {
    mavenCentral()
}

dependencies {
    implementation group: 'com.google.code.gson', name:'gson', version: '2.8.6'
}

application {
    mainClassName = 'vazkii.cmpdl.CMPDL'
}
